--- a/μNCA_jax.ipynb
+++ b/μNCA_jax.ipynb
@@ -381,13 +381,6 @@
       "source": [
         "@jit\n",
         "def iterate_ca(key, ca_params, pool, inner_step):\n",
-        "  # if not SEED_INTO_X:\n",
-        "    # # add some noise back into the pool\n",
-        "    # key, skey1, skey2 = random.split(key, 3)\n",
-        "    # seeds = random.uniform(skey1, (NUM_SEED_PER_STEP, H, W, CHN)) - 0.5\n",
-        "    # pool_seed_idx = random.choice(skey2, NUM_POOL, shape=(NUM_SEED_PER_STEP,), replace=False)[..., None]\n",
-        "    # pool = lax.scatter(pool, pool_seed_idx, seeds, lax.ScatterDimensionNumbers((0, 2, 3, 4),(1,),(1,)), unique_indices=True)\n",
-        "\n",
         "  # take things from the pool\n",
         "  key, skey = random.split(key)\n",
         "  pool_idx = random.choice(skey, NUM_POOL, shape=(BATCH_SIZE,), replace=False)\n",
@@ -494,7 +487,7 @@
         "id": "oACqER2E2K1p"
       },
       "source": [
-        "# train two textures at a time\n",
+        "# train two textures at a time (no TPU parallelism)\n",
         "target_textures = textures[0:2]\n",
         "targets = jnp.array([imread(texture_path, fixed_size=128, mode=\"RGB\")[None, ...] for texture_path in target_textures])\n",
         "key, skey = random.split(key)\n",
